Fixed complete lag and z-index, REFER TO THIS COPY IF ANYTHING BREAKS

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body
 }
 /* LANDING PAGE
 ==================================================== */
-
 section
 {
     height: 100vh;
@@ -27,14 +26,14 @@ section:before
 {
     content: '';
     position: absolute;
-    top: 20%;
+    /* top: 20%;  <<<<< THIS NEEDS TO BE ACTIVATED FOR CHROME TO REDUCE FRAME LAG */
     left: 0;
     width: 100vw;
-    height: 50vh;
+    height: 100vh;
     background: linear-gradient(to right, #f00, #f00, #0f0, #0ff, #ff0, #0ff);
     mix-blend-mode: color;
     pointer-events: none;
-    z-index: 1;
+    /* z-index: 1; */
 } 
 video
 {
@@ -239,8 +238,6 @@ header
     margin: 10px;
     animation: fadeopacity 1s linear forwards;
 }
-
-
 .navbar li a:hover
 {
     background: whitesmoke;
@@ -260,6 +257,7 @@ header
     width: 40px;
     height: 40px;
     transform: rotate(45deg);
+    z-index: 3;
 }
 .arrow span
 {
@@ -268,12 +266,17 @@ header
     left: 50%;
     width: 100%;
     height: 100%;
+    opacity: 0;
     display: block;
     box-sizing: border-box;
     border: none;
     border-right: 2px solid #fff;
     border-bottom: 2px solid #fff;
     animation: arrow 1s linear infinite;
+    animation-delay: arrow 5s;
+    
+    /* animation-delay: 6s ;
+    animation: arrow 1s linear infinite; */
 }
 .arrow span p
 {
@@ -310,20 +313,49 @@ header
     left: 30px;
     animation-delay: 0.8s;
 }
+
+.arrow
+{
+    color: white;
+    animation-name: arrow;
+    animation-duration: infinite;
+    animation-delay: 5s;
+    animation-iteration-count: 1;
+    animation-direction: linear;
+    animation-fill-mode: fowards;
+}
 @keyframes arrow
 {
     0%
     {
+        opacity: 1;
         border-color: #fff;
     }
     20%
     {
+        opacity: 1;
         border-color: #fff;
     }
     30%, 100%
     {
+        opacity: 1;
         border-color: #222;
     }
+}
+@keyframes delay
+{
+    0%
+    {
+        opacity: 0;
+    }
+    100%
+    {
+        opacity: 1;
+    }
+}
+#delay
+{
+    animation-duration: 5s;
 }
 /* =========================================================== */
 
@@ -339,8 +371,8 @@ header
     position: relative;
     top: 15%;
     width: 80%;
-
     margin: 0 10%;
+    z-index: 3;
 }
 .container .box
 {
@@ -465,10 +497,12 @@ header
 .tabs .tabception:hover
 {
     width: 60%;
+    z-index: 3;
 }
 .tabs:hover li
 {
     width: 10%;
+    z-index: 3;
 }
 .tabs .tabception .contactme
 {
